# kahunas-python-client

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-entrypoint.sh  persona.example.txt  pyproject.toml
src/kahunas_client/: __init__.py  anomaly_detection.py  calendar_sync.py  charts.py  checkin_history.py  checkin_reminders.py  client.py  config.py  data_sync.py  exceptions.py  metrics_store.py  pdf_export.py  persona.py  phone_alignment.py  whatsapp.py
src/kahunas_client/cli/: __init__.py  main.py
src/kahunas_client/mcp/: __init__.py  __main__.py  export.py  lambda_handler.py  server.py
src/kahunas_client/models/: __init__.py  auth.py  clients.py  common.py  exercises.py  workouts.py
tests/: conftest.py  functional_test.py  test_anomaly_detection.py  test_calendar_sync.py  test_charts.py  test_checkin_history.py  test_checkin_reminders.py  test_cli.py  test_client.py  test_config.py  test_data_sync.py  test_exceptions.py  test_export.py  test_mcp.py  test_metrics_store.py  test_models.py  test_pdf_export.py  test_persona.py  test_phone_alignment.py  test_whatsapp.py
